# cryptopals-cpp-solutions

./: .gitignore  CMakeLists.txt  README.md
sets/: CMakeLists.txt
sets/01_basics/: 01_hex_to_base64.cpp  01_hex_to_base64.hpp  02_fixed_xor.cpp  02_fixed_xor.hpp  03_single_byte_xor_cipher.cpp  03_single_byte_xor_cipher.hpp  04_detect_single_char_xor.cpp  04_detect_single_char_xor.hpp  05_repeating_key_xor.cpp  05_repeating_key_xor.hpp  06_break_repeating_key_xor.cpp  06_break_repeating_key_xor.hpp  07_aes_in_ecb_mode.cpp  07_aes_in_ecb_mode.hpp  08_detect_aes_in_ecb_mode.cpp  08_detect_aes_in_ecb_mode.hpp  CMakeLists.txt
sets/02_block_crypto/: 09_pkcs7_padding.cpp  09_pkcs7_padding.hpp  10_aes_in_cbc_mode.cpp  10_aes_in_cbc_mode.hpp  11_aes_ecb_cbc_detection_oracle.cpp  11_aes_ecb_cbc_detection_oracle.hpp  CMakeLists.txt
tests/: CMakeLists.txt  test_base_string_conversions.cpp  test_break_repeating_key_xor.cpp  test_crypto_utils.cpp  test_decrypt_aes_ecb.cpp  test_detect_aes_in_ecb_mode.cpp  test_detect_single_char_xor.cpp  test_fixed_xor.cpp  test_hex_to_base64.cpp  test_repeating_key_xor.cpp  test_single_byte_xor_cipher.cpp  test_string_convertions.cpp  test_xor_utils.cpp
tests/sets/01_basics/: CMakeLists.txt  test_01_hex_to_base64.cpp  test_02_fixed_xor.cpp  test_03_single_byte_xor_cipher.cpp  test_04_detect_single_char_xor.cpp  test_05_repeating_key_xor.cpp  test_06_break_repeating_key_xor.cpp  test_07_decrypt_aes_ecb.cpp  test_08_detect_aes_in_ecb_mode.cpp
tests/sets/02_block_crypto/: test_09_pkcs7_padding.cpp  test_10_decrypt_aes_cbc.cpp  test_11_aes_ecb_cbc_detection_oracle.cpp
tests/utils/: CMakeLists.txt  test_base_conversions.cpp  test_base_string_conversions.cpp  test_crypto_utils.cpp  test_edit_distances.cpp  test_xor_utils.cpp
tests/utils/aes/: test_cbc.cpp  test_ecb.cpp
utils/: CMakeLists.txt  base_conversions.cpp  base_conversions.hpp  base_string_conversions.cpp  base_string_conversions.hpp  collection_utils.hpp  crypto_utils.cpp  crypto_utils.hpp  edit_distances.cpp  edit_distances.hpp  file_utils.cpp  file_utils.hpp  padding.cpp  padding.hpp  plaintext_score_utils.cpp  plaintext_score_utils.hpp  string_convertions.cpp  string_convertions.hpp  types.hpp  vector_utils.hpp  xor_utils.cpp  xor_utils.hpp
utils/aes/: CMakeLists.txt  cbc.cpp  cbc.hpp  ecb.cpp  ecb.hpp
